14. Архивировать проект [#861 #500665]